<resources>
    <string name="app_name">Utopia TTS</string>
    <string name="action_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="azure_settings">Azure Settings</string>
    <string name="tts_settings">TTS Settings</string>

    <string name="azure_token">Azure Token</string>
    <string name="azure_region">Azure Region</string>

    <string name="title_tts_settings">TTS Settings</string>
    <string name="title_tts_usage">TTS Usage</string>
    <string name="title_about">About</string>

    <string name="welcome">Welcome to Utopia TTS</string>
    <string name="rights" translatable="false">Copyright © 2022 UtopiaXC All Rights Reserved.</string>

    <string name="tips">Tips</string>
    <string name="tips_tts_driver">The Azure SDK approach uses the official Microsoft development kit, which is fast and stable, but requires an Azure account (with 500,000 free words per month) and a token.\n\nThe WebSocket approach uses the WebSocket interface from the Microsoft TTS website\'s web demo, which is slow, unstable and at risk of not being available at any time, but does not require account registration and key generation, and is highly discouraged.</string>
    <string name="confirm">Confirm</string>

    <string name="tts_driver_title">TTS engine driven approach</string>
    <string name="tts_driver_title_sdk">Azure SDK</string>
    <string name="tts_driver_title_ws">Demo WebSocket</string>
    <string name="warning">Warning</string>
    <string name="warning_blank_token">Please input the token.</string>
    <string name="warning_azure_token_not_checked">Your azure config is not checked. Please tap confirm first.</string>
    <string name="checking">Checking</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="error_azure_token">Your token or region is wrong, please check that it is correct or that the spare capacity is not exhausted, or maybe your network is not available</string>
    <string name="success_azure_token">Your token is available, set successful.</string>
    <string name="actor">Voice Actor</string>
    <string name="region_not_support_pre">The region you set is not support preview actor, please change region first.Now, the support region are East US, West Europe and Southeast Asia</string>
    <string name="actor_is_pre">The voice actor you set is preview, you should only select region which is supported preview.</string>
    <string name="voice_style">Voice Style</string>
    <string name="version">Version</string>
    <string name="change_log">Change Log</string>
    <string name="licenses">License</string>
    <string name="author">Author</string>
    <string name="author_name" translatable="false">UtopiaXC</string>
    <string name="follow_on_github">Follow on GitHub</string>
    <string name="feedback_by_email">Feedback by email</string>
    <string name="github_link" translatable="false">https://github.com/UtopiaXC/UtopiaTTS</string>
    <string name="user_email" translatable="false">utopiaxc@utopiaxc.com</string>
    <string name="feedback_subject">Feedback for UtopiaTTS</string>
    <string name="clear_all_profiles">Clear all profiles</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all_profiles_confirm">Confirm to clear all profiles?</string>
    <string name="settings">Settings</string>
    <string name="change_log_title">Change log(Please wait for GitHub)</string>
    <string name="github_release_link" translatable="false">https://github.com/UtopiaXC/UtopiaTTS</string>
    <string name="ag2s20150909_tts" translatable="false">https://github.com/ag2s20150909/TTS</string>
    <string name="ag2s20150909_tts_title" translatable="false">ag2s20150909 TTS</string>
    <string name="tutorials">Tutorials</string>
    <string name="sorry">Sorry</string>
    <string name="tutorials_is_not_ready">Tutorials is not ready.</string>
    <string name="tips_azure_token">Input the token you get from azure, you can tap tutorials button to learn.</string>
    <string name="output_format">Voice Output Format</string>
    <string name="warning_of_output_format">"Please don't change it if the voice is not stuttering because some format have problems during websocket request. If you want to change it, please use the format with '*' because they are encoded format witch maybe mach stable."</string>
    <string name="tts_demo_text">This is an example of speech synthesis by Utopia TTS.</string>
</resources>